Build 42
- Bugfix: Fog of war fix during unit teleport by Temporal gate
- Bugfix: Unit can't enter invader transport
- Bugfix: demolishing Temporal gate during charge sate
- Units and buildings of other players now colored differently

Build 41 (14.06.2013)
- Added level select screen
- Added game archive
- Game require browser to support WebM video

Build 40 (05.06.2013)
- Added "Orders" tab to right panel
- Tactical AI: Cyclone flies to Rearming deck when have no ammo
- Tactical AI: weapon maximal range check moved to tactical AI
- Implemented weapon's minimal attack range
- First implementation of the fog of war
- Starting this build you can not run game just from local folder, you should set up virtual domain or upload it to remote computer.
- Water display switcher are now clickable
- Start working on game menu (level select menu)
- Code refactoring

Build 39 (17.05.2013)
- Sky Fortress now have correct fire delay and weapon state display
- Added damage area for all weapons
- Added persistent damage for S.C.A.R.A.B. weapon
- Font class optimizations
- Bug fixes
- Bullet speed corrected
- Unit speed corrected
- Map elements (trees, rocks) now draw dynamically

Build 38 (09.05.2013)
- Added music player (tracks will not be available on GitHub)
- Added ability to change music volume on right panel (at Menu tab)
- Added Invader Troop Transport unit
- Added Plasma Tank unit & PlasmaCannon weapon
- Added Amper unit (without weapon)
- Added Mobile Air Defense unit with its weapon
- Added Recon Drone unit (first fly unit)
- Added Tachion Tank unit and TachyonCannon weapon
- Added S.C.A.R.A.B. unit and its weapon
- Added Cyclone unit and its weapon
- Added Sky Fortress unit
- Added ability for Cyclone to rearm in Rearming Deck
- Added shadows to all units that still not had it
- Added unit generation in progress sound
- Unit rotation function significantly improved
- Code refactoring
- Different bug fixes

Build 37 (01.05.2013)
- Added Rearming Deck building