@@ -3,6 +3,8 @@ Build 42
 - Bugfix: Unit can't enter invader transport
 - Bugfix: demolishing Temporal gate during charge sate
 - Units and buildings of other players now colored differently
+- Game basic parameters can be configured throw config object
+- Added damage animation for all units
 
 Build 41 (14.06.2013)
 - Added level select screen
